force-app/main/default/objects/Account/fields/Sales_Cohorts__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cohorts__c</fullName>
    <description>Cohorts/lists designated by the sales team</description>
    <inlineHelpText>Cohorts/lists designated by the sales team</inlineHelpText>
    <label>Sales Cohorts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12M Invoiced &lt;$3499</fullName>
            </value>
            <value>
                <fullName>$1-300 Pro list</fullName>
            </value>
            <value>
                <fullName>$49 Pro list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>