force-app/main/default/objects/Account/fields/Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage__c</fullName>
    <label>Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Need to make contact</fullName>
            </value>
            <value>
                <fullName>Follow-up Required</fullName>
            </value>
            <value>
                <fullName>Requested Meeting</fullName>
            </value>
            <value>
                <fullName>Reached Out</fullName>
            </value>
            <value>
                <fullName>Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Leave BAU</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>