force-app/main/default/objects/Account/fields/Seller_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Seller_Engagement_Score__c</fullName>
    <description>A sum of the seller specific engagement score pieces</description>
    <inlineHelpText>A sum of the seller specific engagement score pieces</inlineHelpText>
    <label>Seller Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>