force-app/main/default/objects/Account/fields/Send_to_Mixpanel__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Mixpanel__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send to Mixpanel</label>
    <type>Checkbox</type>
</CustomField>