force-app/main/default/objects/Account/fields/Service_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Email__c</fullName>
    <description>Email Address to use for standard service communication</description>
    <inlineHelpText>Email Address to use for standard service communication</inlineHelpText>
    <label>Service Email</label>
    <type>Email</type>
</CustomField>