force-app/main/default/objects/Account/fields/Service_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Phone_Number__c</fullName>
    <description>Phone Number to use for standard service communication</description>
    <inlineHelpText>Phone Number to use for standard service communication</inlineHelpText>
    <label>Service Phone</label>
    <type>Phone</type>
</CustomField>