force-app/main/default/objects/Account/fields/Subscription_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Renewal_Date__c</fullName>
    <description>Date of next scheduled subscription renewal</description>
    <inlineHelpText>Date of next scheduled subscription renewal</inlineHelpText>
    <label>Subscription Renewal Date</label>
    <type>Date</type>
</CustomField>