force-app/main/default/objects/Account/fields/Supplier_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Engagement_Score__c</fullName>
    <description>A sum of the supplier specific engagement score pieces</description>
    <inlineHelpText>A sum of the supplier specific engagement score pieces</inlineHelpText>
    <label>Supplier Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>