force-app/main/default/objects/Account/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <description>Used in CS case management for DP email</description>
    <inlineHelpText>Used in CS case management for DP email</inlineHelpText>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>