force-app/main/default/objects/Account/fields/Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Test_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this is a test account</description>
    <inlineHelpText>Checked if this is a test account</inlineHelpText>
    <label>Test Account</label>
    <type>Checkbox</type>
</CustomField>