force-app/main/default/objects/Account/fields/Touch_Tier__c.field-meta.xml
<CustomField>
    <fullName>Touch_Tier__c</fullName>
    <label>Touch Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
                <label>Tier 1 - High</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
                <label>Tier 2 - Medium</label>
            </value>
            <value>
                <fullName>Tier 3</fullName>
                <label>Tier 3 - Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>