force-app/main/default/objects/Account/fields/Unpublished_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Unpublished_Product_Count__c</fullName>
    <description>Unpublished products/experiences</description>
    <inlineHelpText>Unpublished products/experiences</inlineHelpText>
    <label>Unpublished Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>