force-app/main/default/objects/Account/fields/Vendor_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Service_Type__c</fullName>
    <description>Product/service category offered by the Vendor/Supplier</description>
    <inlineHelpText>Product/service category offered by the Vendor/Supplier</inlineHelpText>
    <label>Vendor Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tour operator</fullName>
            </value>
            <value>
                <fullName>Museum</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>