force-app/main/default/objects/Account/fields/Viator_Authenticated__c.field-meta.xml
<CustomField>
    <fullName>Viator_Authenticated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this supplier&apos;s Viator connection been authenticated using oAuth?</description>
    <inlineHelpText>Has this supplier&apos;s Viator connection been authenticated using oAuth?</inlineHelpText>
    <label>Viator Authenticated</label>
    <type>Checkbox</type>
</CustomField>