force-app/main/default/objects/Account/fields/Viator_Configured__c.field-meta.xml
<CustomField>
    <fullName>Viator_Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the customer configured with Viator?</description>
    <inlineHelpText>Is the customer configured with Viator?</inlineHelpText>
    <label>Viator Configured</label>
    <type>Checkbox</type>
</CustomField>