force-app/main/default/objects/Account/fields/Viator_Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>Viator_Connection_Status__c</fullName>
    <description>Renders the current connection status of the supplier&apos;s Viator connection. The data should be in sync with the status label on the Viator Dashboard on Bokun found here: https://extranet.bokun.io/admin/viator-vendor.</description>
    <inlineHelpText>Renders the current connection status of the supplier&apos;s Viator connection. The data should be in sync with the status label on the Viator Dashboard on Bokun found here: https://extranet.bokun.io/admin/viator-vendor.</inlineHelpText>
    <label>Viator Connection Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>