force-app/main/default/objects/Account/fields/Viator_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Viator_Ranking__c</fullName>
    <description>Key Account Ranking from Viator, if provided</description>
    <inlineHelpText>Key Account Ranking from Viator, if provided</inlineHelpText>
    <label>Viator Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>