force-app/main/default/objects/Account/fields/Viator_Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Viator_Supplier_Code__c</fullName>
    <description>Account&apos;s Viator ID, if provided</description>
    <inlineHelpText>Account&apos;s Viator ID, if provided</inlineHelpText>
    <label>Viator Supplier ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>