force-app/main/default/objects/Account/fields/Viator_Website_Link__c.field-meta.xml
<CustomField>
    <fullName>Viator_Website_Link__c</fullName>
    <formula>&quot;https://www.viator.com/operator/&quot;&amp;Viator_Supplier_Code__c</formula>
    <label>Viator Website Link</label>
    <type>Text</type>
</CustomField>